# GesturePilot-C

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DATASET_ATTRIBUTION.txt  GESTURES.md  README.md  TROUBLESHOOTING.md  run_gesture_pilot.bat
config/: gesturepilot.sample.ini
data/processed/gesture_dataset/: dataset_metadata.json
include/: action_mapper.h  config.h  gesture_types.h  inference.h  input_injector.h  temporal_filter.h
models/: gesturepilot.onnx
scripts/: download_dataset.ps1  gesturepilot_app.py  gesturepilot_control.py  inference_server.py  prepare_dataset.py  requirements.txt  tracker.py  train_cnn.py
src/: action_mapper.c  config.c  gesture_types.c  inference_mock.c  inference_pipe.c  input_injector_stub.c  input_injector_win.c  main.c  temporal_filter.c
